# shortfactory

./: .commitmsg.tmp  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  gpt_pro_first_response_a_to_f.md  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml
docs/: 00_PROJECT_BRIEF.md  01_ARCHITECTURE.md  02_DATA_CONTRACTS.md  03_SECURITY_POLICY.md  04_CODEX_WORKFLOW.md  05_PHASE_PLAN.md  06_TEST_PLAN.md  07_BASELINE_AUDIT.md
schemas/: README.md
src/shorts_pipeline/: __init__.py  b_service.py  c_service.py  config.py  d_service.py  db.py  dev_cli.py  dev_fakes.py  (+9 more)
templates/: TEMPLATE_METADATA.json  kdenlive_vertical_1080x1920_30fps.kdenlive
tests/: test_b_generation.py  test_baseline_audit_doc.py  test_c_compiler.py  test_ci_workflow.py  test_config_dotenv.py  test_d_image_manifest.py  test_db.py  test_dev_cli.py  test_dev_cli_doctor.py  test_dev_cli_kdenlive.py  test_dev_cli_run.py  test_dev_cli_verify_project.py  test_dev_inspect_cli.py  test_e_script_generation.py  test_f_kdenlive_project.py  test_integration_smoke.py  test_manual_paste_cc1.py  test_models.py  test_multisample_smoke.py  test_paste_analyze_pc1.py  test_project_creation.py  test_project_verify.py  test_real_llm_providers.py  test_real_llm_sdk_contract.py  test_redteam_content_safety.py  test_security.py  test_shorts_playbook_sh1.py  test_sources_naver_s3.py  test_sources_s1.py  test_sources_youtube_s2.py  test_state_machine.py  test_text_file_hygiene.py  test_text_rendering.py  test_timeline.py  test_tone_variants.py  test_ui_app_smoke.py  test_ui_controller.py
(+25 files in other folders)
